Continue drafting Sbemail Songs manual

--- a/Manual/HTML/css/Sbemail Songs/Sbemail Songs.css
+++ b/Manual/HTML/css/Sbemail Songs/Sbemail Songs.css
@@ -1,4 +1,4 @@
-table thead tr th{
+table thead.concept1table tr th{
     border-top-style:hidden;
     border-left-style:hidden;
     border-right-style:hidden;
